<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>action_client_python</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="sabbi.chakri@gmail.com">greenquest</maintainer>
  <license>TODO: License declaration</license>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_action</depend>
  <depend>custom_my_interfaces</depend>
  <depend>python3-websocket</depend>
  <depend>python3-yaml</depend>
  <depend>ament_index_python</depend>


  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
